# Henk

./: .env.example  .gitignore  Claude.md  Henk Deinstalleren.bat  Henk Deinstalleren.command  Henk Deinstalleren.desktop  Henk Installeren.bat  Henk Installeren.command  Henk Installeren.desktop  deinstalleer.py  deinstalleer.sh  henk-design-v14.docx  henk.yaml.default  install.py  installeer.sh  pyproject.toml  requests.py
henk/: __init__.py  brain.py  cli.py  commands.py  config.py  dispatcher.py  gateway.py  heartbeat.py  model_gateway.py  output.py  react_loop.py  repl.py  requirements.py  spinner.py  task_display.py  token_tracker.py  transcript.py
henk/_stubs/: __init__.py  openai.py
henk/memory/: __init__.py  models.py  retrieval.py  scoring.py  staging.py  store.py
henk/router/: __init__.py  router.py
henk/security/: __init__.py  path_validator.py  proxy.py  source_tag.py
henk/skills/: __init__.py  models.py  parser.py  runner.py  selector.py
henk/tools/: __init__.py  base.py  code_runner.py  file_manager.py  memory_write.py  web_search.py
tests/: conftest.py  test_brain.py  test_commands.py  test_config.py  test_deinstalleer.py  test_gateway.py  test_heartbeat.py  test_init.py  test_install.py  test_kill_switch.py  test_memory_store.py  test_memory_write.py  test_providers.py  test_react_loop.py  test_repl.py  test_requirements.py  test_retrieval.py  test_router.py  test_scoring.py  test_security.py  test_skill_parser.py  test_skill_runner.py  test_skill_selector.py  test_staging.py  test_task_display.py  test_tools.py  test_transcript.py
(+26 files in other folders)
